made progress on fixing overflow;

--- a/frontend/src/components/noteAppContainer/noteAppContainer.css
+++ b/frontend/src/components/noteAppContainer/noteAppContainer.css
@@ -2,14 +2,17 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 100vw;
+    /* width: 100vw; */
     height: 90vh;
     padding: 0rem 2rem;
     box-sizing: border-box;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 @media (max-width: 600px) {
     .note-app-container {
         flex-direction: column;
+        /* padding: 0rem 0.5rem; */
     }
 }
