--- a/frontend/src/components/textBox/textBox.css
+++ b/frontend/src/components/textBox/textBox.css
@@ -6,27 +6,23 @@
 }
 
 textarea {
-    max-width: 1200px;
-    max-height: 1000px;
     width: 100%;
     height: 75vh;
 }
 
 @media (max-width: 600px) {
     .text-box {
-        /* right: 0;
-        bottom: 0; */
-        flex-basis: 100%;
+        /* flex-basis: 100%; */
         width: 95%;
         margin: 0;
         left: 0;
-        /* top: 0; */
         position: absolute;
         transition: transform 0.3s;
     }
 
     .text-box.hidden {
-        transform: translateX(-100%);
+        /* transform: translateX(-100%); */
+        /* display: none; */
     }
 
     .text-box.visible {
